--- a/projects/catarina/src/lib/design-system/form/select-input/select-input.html
+++ b/projects/catarina/src/lib/design-system/form/select-input/select-input.html
@@ -1,6 +1,6 @@
 <div>
-    <input catInput [value]="value" [type]="type" readonly id="select" (mousedown)="active =! active" [placeholder]="placeholder">
-    <section role="listbox" [class]="selectInputClass" class="options" [ngClass]="active ? 'options-active' : 'options.unactive'" [style.transform]="transform">
+    <input catInput #input [value]="value" [type]="type" readonly id="select" (mousedown)="toggleActive()" [placeholder]="placeholder">
+    <section #optionsContainer role="listbox" [class]="selectInputClass" class="options" [ngClass]="active ? 'options-active' : 'options.unactive'" [style.transform]="transform">
         @if (active) {
             <div role="option"*ngFor="let option of options" (mousedown)="choseValue(option)">
                 {{ option }}
